--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
       </div>
     
-      <div class="navlinks">
+      <div class="navlinks" id="navlinks">
         <div class="navlink">
           <a href="#aboutSection">about</a>
         </div>
@@ -50,7 +50,7 @@
         </div>
       </div>
     
-      <div class="burger">
+      <div class="burger" id="burger">
         <div class="line"></div>
         <div class="line"></div>
         <div class="line"></div>
