--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   </script>
 </head>
 <body>
+
+  <div class="mainContainer">
   <!-- //@ NavBar -->
     <div class="navbar">
       <div class="title">
@@ -66,7 +68,6 @@
           <div class="actionbtntext">View Projects</div>
         </a>
       </div>
-      <div class="image"><img src="./assets/images/main.svg" alt="Main Image" /></div>
     </div>
 
     <!-- //@ About -->
@@ -164,7 +165,6 @@
           <div class="projectImageContainer">
             <img src="./assets/images/books.jpg" alt="Chat App" class="projectImage" />
           </div>
-
           <div class="projectInfo">
             <div class="projectName">Chat App</div>
             <div class="projectLinks">
@@ -192,7 +192,7 @@
               </div>
             </div>
             <div class="extraprojectinfo">
-              <div class="extraprojectinfotitle">Functionality & Key info</div>
+              <div class="extraprojectinfotitle">Features & Functionality</div>
               <ol class="orderedlist">
                 <li>Authentication Setup (SignUp and Login).</li>
                 <li>First Signup and create an account.</li>
@@ -242,7 +242,7 @@
               </div>
             </div>
             <div class="extraprojectinfo">
-              <div class="extraprojectinfotitle">Functionality & Key info</div>
+              <div class="extraprojectinfotitle">Features & Functionality</div>
               <ol class="orderedlist">
                 <li>Authentication Setup (SignUp and Login).</li>
                 <li>First Signup and create an account.</li>
@@ -288,7 +288,7 @@
               </div>
             </div>
             <div class="extraprojectinfo">
-              <div class="extraprojectinfotitle">Functionality & Key info</div>
+              <div class="extraprojectinfotitle">Features & Functionality</div>
               <ol class="orderedlist">
                 <li>Authentication Setup (SignUp and Login).</li>
                 <li>First Signup and create an account.</li>
@@ -334,7 +334,7 @@
               </div>
             </div>
             <div class="extraprojectinfo">
-              <div class="extraprojectinfotitle">Functionality & Key info</div>
+              <div class="extraprojectinfotitle">Features & Functionality</div>
               <ol class="orderedlist">
                 <li>Authentication Setup (SignUp and Login).</li>
                 <li>First Signup and create an account.</li>
@@ -380,7 +380,7 @@
               </div>
             </div>
             <div class="extraprojectinfo">
-              <div class="extraprojectinfotitle">Functionality & Key info</div>
+              <div class="extraprojectinfotitle">Features & Functionality</div>
               <ol class="orderedlist">
                 <li>Authentication Setup (SignUp and Login).</li>
                 <li>First Signup and create an account.</li>
@@ -426,7 +426,7 @@
               </div>
             </div>
             <div class="extraprojectinfo">
-              <div class="extraprojectinfotitle">Functionality & Key info</div>
+              <div class="extraprojectinfotitle">Features & Functionality</div>
               <ol class="orderedlist">
                 <li>Authentication Setup (SignUp and Login).</li>
                 <li>First Signup and create an account.</li>
@@ -522,6 +522,6 @@
       </div>  
 
     </div>
-
+</div>
 </body>
 </html>
