--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+  <meta name="description" content="This is Naveen Kumar Reddy's Personal Portfolio">
   <title>Naveen</title>
   <link rel="stylesheet" href="./index.css">
   <script src="./index.js" defer type="module"></script>
