--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="homeTextContainer">
         <div class="homeText">I am Naveen.<br />I am a Web Developer.</div>
         <a href="#projectsSection" class="actionbtn">
-          <img src="./assets/images/suitcase.png" alt="SuitCase" class="actionbtnimg">
+          <img src="./assets/images/suitcase.png" alt="SuitCase" class="actionbtnimg" width="20px">
           <div class="actionbtntext">View Projects</div>
         </a>
       </div>
@@ -101,57 +101,57 @@
       <div class="skillTitle">Skills</div>
       <div class="skillsContainer">
         <div class="skill">
-          <img src="./assets/images/html.png" alt="Html" class="skillImage" />
+          <img src="./assets/images/html.png" alt="Html" class="skillImage" width="70px" height="auto"/>
           <div class="skillName">Html</div>
         </div>
         
         <div class="skill">
-          <img src="./assets/images/css.png" alt="Css" class="skillImage" />
+          <img src="./assets/images/css.png" alt="Css" class="skillImage" width="70px" height="auto"/>
           <div class="skillName">Css</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/javascript.png" alt="Javascript" class="skillImage" />
+          <img src="./assets/images/javascript.png" alt="Javascript" class="skillImage" width="70px" height="auto"/>
           <div class="skillName">Javascript</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/bootstrap.png" alt="Bootstrap" class="skillImage" />
+          <img src="./assets/images/bootstrap.png" alt="Bootstrap" class="skillImage" width="70px" height="auto"/>
           <div class="skillName">Bootstrap</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/jquery.png" alt="Jquery" class="skillImage" />
+          <img src="./assets/images/jquery.png" alt="Jquery" class="skillImage" width="70px" height="auto"/>
           <div class="skillName">Jquery</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/sass.png" alt="Sass" class="skillImage" />
+          <img src="./assets/images/sass.png" alt="Sass" class="skillImage" width="70px" height="auto"/>
           <div class="skillName">Sass</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/react.png" alt="React" class="skillImage" />
+          <img src="./assets/images/react.png" alt="React" class="skillImage" width="70px" height="auto"/>
           <div class="skillName">React</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/redux.png" alt="Redux" class="skillImage" />
+          <img src="./assets/images/redux.png" alt="Redux" class="skillImage" width="70px" height="auto"/>
           <div class="skillName">Redux</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/nodejs.png" alt="NodeJs" class="skillImage" />
+          <img src="./assets/images/nodejs.png" alt="NodeJs" class="skillImage" width="70px" height="auto"/>
           <div class="skillName">Nodejs</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/express.png" alt="ExpressJs" class="skillImage" />
+          <img src="./assets/images/express.png" alt="ExpressJs" class="skillImage" width="70px" height="auto"/>
           <div class="skillName">Expressjs</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/mongodb.png" alt="MongoDB" class="skillImage" />
+          <img src="./assets/images/mongodb.png" alt="MongoDB" class="skillImage" width="70px" height="auto"/>
           <div class="skillName">MongoDB</div>
         </div>
       </div>
@@ -164,7 +164,7 @@
 
         <div class="project">
           <div class="projectImageContainer">
-            <img src="./assets/images/books.jpg" alt="Chat App" class="projectImage" />
+            <img src="./assets/images/books.jpg" alt="Chat App" class="projectImage" width="100%" height="200px"/>
           </div>
           <div class="projectInfo">
             <div class="projectName">Chat App</div>
@@ -215,7 +215,7 @@
 
         <div class="project">
           <div class="projectImageContainer">
-            <img src="./assets/images/blogposter.png" alt="Blog App" class="projectImage" />
+            <img src="./assets/images/blogposter.png" alt="Blog App" class="projectImage" width="100%" height="200px"/>
           </div>
           <div class="projectInfo">
             <div class="projectName">Blog App</div>
@@ -265,7 +265,7 @@
 
         <div class="project">
           <div class="projectImageContainer">
-            <img src="./assets/images/newspaper.jpg" alt="News App" class="projectImage" />
+            <img src="./assets/images/newspaper.jpg" alt="News App" class="projectImage" width="100%" height="200px"/>
           </div>
           <div class="projectInfo">
             <div class="projectName">News App</div>
@@ -311,7 +311,7 @@
 
         <div class="project">
           <div class="projectImageContainer">
-            <img src="./assets/images/movie.jpg" alt="Movie App" class="projectImage" />
+            <img src="./assets/images/movie.jpg" alt="Movie App" class="projectImage" width="100%" height="200px"/>
           </div>
           <div class="projectInfo">
             <div class="projectName">Movie App</div>
@@ -357,7 +357,7 @@
 
         <div class="project">
           <div class="projectImageContainer">
-            <img src="./assets/images/shoppp.png" alt="FullStack Shop" class="projectImage" />
+            <img src="./assets/images/shoppp.png" alt="FullStack Shop" class="projectImage" width="100%" height="200px"/>
           </div>
           <div class="projectInfo">
             <div class="projectName">FullStack Shop</div>
@@ -403,7 +403,7 @@
 
         <div class="project">
           <div class="projectImageContainer">
-            <img src="./assets/images/covid.jpg" alt="Covid Tracker" class="projectImage" />
+            <img src="./assets/images/covid.jpg" alt="Covid Tracker" class="projectImage" width="100%" height="200px"/>
           </div>
           <div class="projectInfo">
             <div class="projectName">Covid Tracker</div>
@@ -500,25 +500,25 @@
     
       <div class="mediaLinks">
         <a href="https://www.facebook.com/naveen12309/" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/images/facebook.png" alt="Facebook" />
+          <img src="./assets/images/facebook.png" alt="Facebook" width="30px"/>
         </a>
 
         <a href="https://twitter.com/Naveen87763128" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/images/twitter.png" alt="Twitter" />
+          <img src="./assets/images/twitter.png" alt="Twitter" width="30px"/>
         </a>
 
         <a href="https://github.com/naveen0-0" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/images/github.png" alt="Github" />
+          <img src="./assets/images/github.png" alt="Github" width="30px"/>
         </a>
       </div>
 
 
       <div class="success" id="success">
-        <img src="./assets/images/checked.png" alt="checked">
+        <img src="./assets/images/checked.png" alt="checked" width="30px">
         <div class="msg">Message Successfully Sent</div>
       </div>
       <div class="error" id="error">
-        <img src="./assets/images/cancel.png" alt="Cancel">
+        <img src="./assets/images/cancel.png" alt="Cancel" width="30px">
         <div class="msg">Error Occured</div>
       </div>  
 
