--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <div class="navlink" title="Download the Resume">
           <a href="./assets/pdfs/resume.pdf" class="resume" target="_blank" download="Naveen_Kumar_Reddy_Resume">
-            <img src="./assets/images/download.png" alt="download">
+            <img src="./assets/images/download.png" alt="download" decoding="async" />
             <div>Resume</div>
           </a>
         </div>
@@ -65,7 +65,7 @@
       <div class="homeTextContainer">
         <div class="homeText">I am Naveen.<br />I am a Web Developer.</div>
         <a href="#projectsSection" class="actionbtn">
-          <img src="./assets/images/suitcase.png" alt="SuitCase" class="actionbtnimg">
+          <img src="./assets/images/suitcase.png" alt="SuitCase" class="actionbtnimg" decoding="async" />
           <div class="actionbtntext">View Projects</div>
         </a>
       </div>
@@ -101,57 +101,57 @@
       <div class="skillTitle">Skills</div>
       <div class="skillsContainer">
         <div class="skill">
-          <img src="./assets/images/html.png" alt="Html" class="skillImage" />
+          <img src="./assets/images/html.png" alt="Html" class="skillImage" decoding="async"/>
           <div class="skillName">Html</div>
         </div>
         
         <div class="skill">
-          <img src="./assets/images/css.png" alt="Css" class="skillImage" />
+          <img src="./assets/images/css.png" alt="Css" class="skillImage" decoding="async"/>
           <div class="skillName">Css</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/javascript.png" alt="Javascript" class="skillImage" />
+          <img src="./assets/images/javascript.png" alt="Javascript" class="skillImage" decoding="async"/>
           <div class="skillName">Javascript</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/bootstrap.png" alt="Bootstrap" class="skillImage" />
+          <img src="./assets/images/bootstrap.png" alt="Bootstrap" class="skillImage" decoding="async"/>
           <div class="skillName">Bootstrap</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/jquery.png" alt="Jquery" class="skillImage" />
+          <img src="./assets/images/jquery.png" alt="Jquery" class="skillImage" decoding="async"/>
           <div class="skillName">Jquery</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/sass.png" alt="Sass" class="skillImage" />
+          <img src="./assets/images/sass.png" alt="Sass" class="skillImage" decoding="async"/>
           <div class="skillName">Sass</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/react.png" alt="React" class="skillImage" />
+          <img src="./assets/images/react.png" alt="React" class="skillImage" decoding="async"/>
           <div class="skillName">React</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/redux.png" alt="Redux" class="skillImage" />
+          <img src="./assets/images/redux.png" alt="Redux" class="skillImage" decoding="async"/>
           <div class="skillName">Redux</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/nodejs.png" alt="NodeJs" class="skillImage" />
+          <img src="./assets/images/nodejs.png" alt="NodeJs" class="skillImage" decoding="async"/>
           <div class="skillName">Nodejs</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/express.png" alt="ExpressJs" class="skillImage" />
+          <img src="./assets/images/express.png" alt="ExpressJs" class="skillImage" decoding="async"/>
           <div class="skillName">Expressjs</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/mongodb.png" alt="MongoDB" class="skillImage" />
+          <img src="./assets/images/mongodb.png" alt="MongoDB" class="skillImage" decoding="async"/>
           <div class="skillName">MongoDB</div>
         </div>
       </div>
@@ -164,17 +164,17 @@
 
         <div class="project">
           <div class="projectImageContainer">
-            <img src="./assets/images/books.jpg" alt="Chat App" class="projectImage" />
+            <img src="./assets/images/books.jpg" alt="Chat App" class="projectImage" decoding="async"/>
           </div>
           <div class="projectInfo">
             <div class="projectName">Chat App</div>
             <div class="projectLinks">
               <a href="https://github.com/naveen0-0/converseclient" target="_blank" title='View Code' class="projectLink">
-                <img src="./assets/images/github.png" alt="Github" />
+                <img src="./assets/images/github.png" alt="Github" decoding="async"/>
                 <div>Code</div>
               </a>
               <a href="https://converse-1910.netlify.app" target="_blank" title='Go to Site' class="projectLink">
-                <img src="./assets/images/live.png" alt="Live" />
+                <img src="./assets/images/live.png" alt="Live" decoding="async"/>
                 <div>Live</div>
               </a>
             </div>
@@ -215,17 +215,17 @@
 
         <div class="project">
           <div class="projectImageContainer">
-            <img src="./assets/images/blogposter.png" alt="Blog App" class="projectImage" />
+            <img src="./assets/images/blogposter.png" alt="Blog App" class="projectImage" decoding="async"/>
           </div>
           <div class="projectInfo">
             <div class="projectName">Blog App</div>
             <div class="projectLinks">
               <a href="https://github.com/naveen0-0/realblogclient" target="_blank" title='View Code' class="projectLink">
-                <img src="./assets/images/github.png" alt="Github" />
+                <img src="./assets/images/github.png" alt="Github" decoding="async"/>
                 <div>Code</div>
               </a>
               <a href="https://blogreal.netlify.app" target="_blank" title='Go to Site' class="projectLink">
-                <img src="./assets/images/live.png" alt="Live" />
+                <img src="./assets/images/live.png" alt="Live" decoding="async"/>
                 <div>Live</div>
               </a>
             </div>
@@ -265,17 +265,17 @@
 
         <div class="project">
           <div class="projectImageContainer">
-            <img src="./assets/images/newspaper.jpg" alt="News App" class="projectImage"/>
+            <img src="./assets/images/newspaper.jpg" alt="News App" class="projectImage" decoding="async"/>
           </div>
           <div class="projectInfo">
             <div class="projectName">News App</div>
             <div class="projectLinks">
               <a href="https://github.com/naveen0-0/news" target="_blank" title='View Code' class="projectLink">
-                <img src="./assets/images/github.png" alt="Github" />
+                <img src="./assets/images/github.png" alt="Github" decoding="async"/>
                 <div>Code</div>
               </a>
               <a href="https://newsroll.netlify.app" target="_blank" title='Go to Site' class="projectLink">
-                <img src="./assets/images/live.png" alt="Live" />
+                <img src="./assets/images/live.png" alt="Live" decoding="async"/>
                 <div>Live</div>
               </a>
             </div>
@@ -311,17 +311,17 @@
 
         <div class="project">
           <div class="projectImageContainer">
-            <img src="./assets/images/movie.jpg" alt="Movie App" class="projectImage" />
+            <img src="./assets/images/movie.jpg" alt="Movie App" class="projectImage" decoding="async"/>
           </div>
           <div class="projectInfo">
             <div class="projectName">Movie App</div>
             <div class="projectLinks">
               <a href="https://github.com/naveen0-0/newmovie" target="_blank" title='View Code' class="projectLink">
-                <img src="./assets/images/github.png" alt="Github" />
+                <img src="./assets/images/github.png" alt="Github" decoding="async"/>
                 <div>Code</div>
               </a>
               <a href="https://mynori.netlify.app" target="_blank" title='Go to Site' class="projectLink">
-                <img src="./assets/images/live.png" alt="Live" />
+                <img src="./assets/images/live.png" alt="Live" decoding="async"/>
                 <div>Live</div>
               </a>
             </div>
@@ -357,17 +357,17 @@
 
         <div class="project">
           <div class="projectImageContainer">
-            <img src="./assets/images/shoppp.png" alt="FullStack Shop" class="projectImage" />
+            <img src="./assets/images/shoppp.png" alt="FullStack Shop" class="projectImage" decoding="async"/>
           </div>
           <div class="projectInfo">
             <div class="projectName">FullStack Shop</div>
             <div class="projectLinks">
               <a href="https://github.com/naveen0-0/ecommerceclient" target="_blank" title='View Code' class="projectLink">
-                <img src="./assets/images/github.png" alt="Github" />
+                <img src="./assets/images/github.png" alt="Github" decoding="async"/>
                 <div>Code</div>
               </a>
               <a href="https://xhoppie.netlify.app" target="_blank" title='Go to Site' class="projectLink">
-                <img src="./assets/images/live.png" alt="Live" />
+                <img src="./assets/images/live.png" alt="Live" decoding="async"/>
                 <div>Live</div>
               </a>
             </div>
@@ -403,17 +403,17 @@
 
         <div class="project">
           <div class="projectImageContainer">
-            <img src="./assets/images/covid.jpg" alt="Covid Tracker" class="projectImage" />
+            <img src="./assets/images/covid.jpg" alt="Covid Tracker" class="projectImage" decoding="async"/>
           </div>
           <div class="projectInfo">
             <div class="projectName">Covid Tracker</div>
             <div class="projectLinks">
               <a href="https://github.com/naveen0-0/trackerc19" target="_blank" title='View Code' class="projectLink">
-                <img src="./assets/images/github.png" alt="Github" />
+                <img src="./assets/images/github.png" alt="Github" decoding="async"/>
                 <div>Code</div>
               </a>
               <a href="https://trackerc19.netlify.app" target="_blank" title='Go to Site' class="projectLink">
-                <img src="./assets/images/live.png" alt="Live" />
+                <img src="./assets/images/live.png" alt="Live" decoding="async"/>
                 <div>Live</div>
               </a>
             </div>
@@ -500,25 +500,25 @@
     
       <div class="mediaLinks">
         <a href="https://www.facebook.com/naveen12309/" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/images/facebook.png" alt="Facebook" />
+          <img src="./assets/images/facebook.png" alt="Facebook" decoding="async"/>
         </a>
 
         <a href="https://twitter.com/Naveen87763128" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/images/twitter.png" alt="Twitter" />
+          <img src="./assets/images/twitter.png" alt="Twitter" decoding="async"/>
         </a>
 
         <a href="https://github.com/naveen0-0" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/images/github.png" alt="Github" />
+          <img src="./assets/images/github.png" alt="Github" decoding="async"/>
         </a>
       </div>
 
 
       <div class="success" id="success">
-        <img src="./assets/images/checked.png" alt="checked" >
+        <img src="./assets/images/checked.png" alt="checked" decoding="async">
         <div class="msg">Message Successfully Sent</div>
       </div>
       <div class="error" id="error">
-        <img src="./assets/images/cancel.png" alt="Cancel" >
+        <img src="./assets/images/cancel.png" alt="Cancel" decoding="async">
         <div class="msg">Error Occured</div>
       </div>  
 
