Small Style Changes

--- a/index.html
+++ b/index.html
@@ -461,6 +461,7 @@
           required 
           class="name"
           id="username"
+          autocomplete="off"
         />
 
         <input 
@@ -470,6 +471,7 @@
           required 
           class="email"
           id="email"
+          autocomplete="off"
         />
 
         <textarea 
@@ -480,6 +482,7 @@
           required 
           class="subject"
           id="subject"
+          autocomplete="off"
         ></textarea>
 
         <textarea 
@@ -490,7 +493,8 @@
           required 
           class="message"
           id="message"
-          ></textarea>
+          autocomplete="off"
+        ></textarea>
         
         <button type='submit' class="formsubmit" id="formSubmit">
           <div class="submittext" id="submittext">Send</div>
