--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
         <div class="project">
           <div class="projectImageContainer">
-            <img src="./assets/images/books.jpg" alt="Chat App" class="projectImage" decoding="async"/>
+            <img src="./assets/images/chat.png" alt="Chat App" class="projectImage" decoding="async"/>
           </div>
           <div class="projectInfo">
             <div class="projectName">Chat App</div>
@@ -215,7 +215,7 @@
 
         <div class="project">
           <div class="projectImageContainer">
-            <img src="./assets/images/blogposter.png" alt="Blog App" class="projectImage" decoding="async"/>
+            <img src="./assets/images/blog.png" alt="Blog App" class="projectImage" decoding="async"/>
           </div>
           <div class="projectInfo">
             <div class="projectName">Blog App</div>
@@ -265,7 +265,7 @@
 
         <div class="project">
           <div class="projectImageContainer">
-            <img src="./assets/images/newspaper.jpg" alt="News App" class="projectImage" decoding="async"/>
+            <img src="./assets/images/news.png" alt="News App" class="projectImage" decoding="async"/>
           </div>
           <div class="projectInfo">
             <div class="projectName">News App</div>
@@ -311,7 +311,7 @@
 
         <div class="project">
           <div class="projectImageContainer">
-            <img src="./assets/images/movie.jpg" alt="Movie App" class="projectImage" decoding="async"/>
+            <img src="./assets/images/movie.png" alt="Movie App" class="projectImage" decoding="async"/>
           </div>
           <div class="projectInfo">
             <div class="projectName">Movie App</div>
@@ -357,7 +357,7 @@
 
         <div class="project">
           <div class="projectImageContainer">
-            <img src="./assets/images/shoppp.png" alt="FullStack Shop" class="projectImage" decoding="async"/>
+            <img src="./assets/images/shop.png" alt="FullStack Shop" class="projectImage" decoding="async"/>
           </div>
           <div class="projectInfo">
             <div class="projectName">FullStack Shop</div>
@@ -403,7 +403,7 @@
 
         <div class="project">
           <div class="projectImageContainer">
-            <img src="./assets/images/covid.jpg" alt="Covid Tracker" class="projectImage" decoding="async"/>
+            <img src="./assets/images/covid.png" alt="Covid Tracker" class="projectImage" decoding="async"/>
           </div>
           <div class="projectInfo">
             <div class="projectName">Covid Tracker</div>
