Project Extra Informatio Update

--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
       <div class="projectsContainer">
 
         <div class="project">
+          <div class="projectName">1.Chat App</div>
           <div class="projectImageContainer">
             <img src="./assets/images/chat.png" alt="Chat App" class="projectImage" decoding="async"/>
           </div>
           <div class="projectInfo">
-            <div class="projectName">Chat App</div>
             <div class="projectLinks">
               <a href="https://github.com/naveen0-0/converseclient" target="_blank" title='View Code' class="projectLink">
                 <img src="./assets/images/github.png" alt="Github" decoding="async"/>
@@ -214,11 +214,11 @@
 
 
         <div class="project">
+          <div class="projectName">2.Blog App</div>
           <div class="projectImageContainer">
             <img src="./assets/images/blog.png" alt="Blog App" class="projectImage" decoding="async"/>
           </div>
           <div class="projectInfo">
-            <div class="projectName">Blog App</div>
             <div class="projectLinks">
               <a href="https://github.com/naveen0-0/realblogclient" target="_blank" title='View Code' class="projectLink">
                 <img src="./assets/images/github.png" alt="Github" decoding="async"/>
@@ -245,18 +245,20 @@
             <div class="extraprojectinfo">
               <div class="extraprojectinfotitle">Features & Functionality</div>
               <ol class="orderedlist">
-                <li>Authentication Setup (SignUp and Login).</li>
+                <li>You will be presented with the list of all blogs.</li>
+                <li>You can click on the blog you are interested in and read more.</li>
+                <li>You have to create an account if you want to create a blog.</li>
+                <li>Click on the signup button in the navbar.</li>
                 <li>First Signup and create an account.</li>
                 <li>You will be redirected to the login page.</li>
                 <li>Login with your credentials.</li>
-                <li>Go to the "THIRD" tab (Add Friend tab) and search for you friend.</li>
-                <li>Hit the send button to send a friend request (Create another user in a private window to simulate this experience).</li>
-                <li>Your friend will receive your friend request (which can be "ACCEPTED" or "DECLINED").</li>
-                <li>If accepted, Your friend will be added in your friends list in the first tab.</li>
-                <li>You can send messages back and forth with your friend.</li>
-                <li>In the second tab, you can enter a group name and create a group.</li>
-                <li>And in the top right, you can click the icon and your friend to the group and have group conversations.</li>
-                <li>By the way, LOGOUT button is in the bottom left corner.</li>
+                <li>You will be redirected to the homepage (Logged In Version).</li>
+                <li>You can see the newblog and profile buttons in the navbar.</li>
+                <li>You can go to the newblog page and enter all the info and press Upload.</li>
+                <li>You will get a message saying "Blog created successfully".</li>
+                <li>You can go to the homepage and see the article you have just created.</li>
+                <li>The Profile tab is self explanatory</li>
+                <li>Sign Out button is also in the page.</li>
               </ol>
             </div>
           </div>
@@ -264,11 +266,11 @@
 
 
         <div class="project">
+          <div class="projectName">3.News App</div>
           <div class="projectImageContainer">
             <img src="./assets/images/news.png" alt="News App" class="projectImage" decoding="async"/>
           </div>
           <div class="projectInfo">
-            <div class="projectName">News App</div>
             <div class="projectLinks">
               <a href="https://github.com/naveen0-0/news" target="_blank" title='View Code' class="projectLink">
                 <img src="./assets/images/github.png" alt="Github" decoding="async"/>
@@ -291,18 +293,11 @@
             <div class="extraprojectinfo">
               <div class="extraprojectinfotitle">Features & Functionality</div>
               <ol class="orderedlist">
-                <li>Authentication Setup (SignUp and Login).</li>
-                <li>First Signup and create an account.</li>
-                <li>You will be redirected to the login page.</li>
-                <li>Login with your credentials.</li>
-                <li>Go to the "THIRD" tab (Add Friend tab) and search for you friend.</li>
-                <li>Hit the send button to send a friend request (Create another user in a private window to simulate this experience).</li>
-                <li>Your friend will receive your friend request (which can be "ACCEPTED" or "DECLINED").</li>
-                <li>If accepted, Your friend will be added in your friends list in the first tab.</li>
-                <li>You can send messages back and forth with your friend.</li>
-                <li>In the second tab, you can enter a group name and create a group.</li>
-                <li>And in the top right, you can click the icon and your friend to the group and have group conversations.</li>
-                <li>By the way, LOGOUT button is in the bottom left corner.</li>
+                <li>It is a simple news app built with React.</li>
+                <li>Click on the article and you will be redirected to the news article.</li>
+                <li>Press the hamburger icon to open the menu from the left.</li>
+                <li>Select any category you want.</li>
+                <li>Enjoy the articles from that category.</li>
               </ol>
             </div>
           </div>
@@ -310,11 +305,11 @@
 
 
         <div class="project">
+          <div class="projectName">4.Movie App</div>
           <div class="projectImageContainer">
             <img src="./assets/images/movie.png" alt="Movie App" class="projectImage" decoding="async"/>
           </div>
           <div class="projectInfo">
-            <div class="projectName">Movie App</div>
             <div class="projectLinks">
               <a href="https://github.com/naveen0-0/newmovie" target="_blank" title='View Code' class="projectLink">
                 <img src="./assets/images/github.png" alt="Github" decoding="async"/>
@@ -337,18 +332,13 @@
             <div class="extraprojectinfo">
               <div class="extraprojectinfotitle">Features & Functionality</div>
               <ol class="orderedlist">
-                <li>Authentication Setup (SignUp and Login).</li>
-                <li>First Signup and create an account.</li>
-                <li>You will be redirected to the login page.</li>
-                <li>Login with your credentials.</li>
-                <li>Go to the "THIRD" tab (Add Friend tab) and search for you friend.</li>
-                <li>Hit the send button to send a friend request (Create another user in a private window to simulate this experience).</li>
-                <li>Your friend will receive your friend request (which can be "ACCEPTED" or "DECLINED").</li>
-                <li>If accepted, Your friend will be added in your friends list in the first tab.</li>
-                <li>You can send messages back and forth with your friend.</li>
-                <li>In the second tab, you can enter a group name and create a group.</li>
-                <li>And in the top right, you can click the icon and your friend to the group and have group conversations.</li>
-                <li>By the way, LOGOUT button is in the bottom left corner.</li>
+                <li>You will land on the Movies Tab on the initial load of the website.</li>
+                <li>You will get a list of movies and you can click any of the movie to see more information regarding that movie.</li>
+                <li>You can change to a different category in the categories section.</li>
+                <li>You can search any movie you want in the last category in the categories section.</li>
+                <li>You can go to the Tv Shows Section and do the same thing as above regarding various categories and search option.</li>
+                <li>And on top of that, You can deep into each season and each episode as well to read more information.</li>
+                <li>The Persons Tab is Self Explanatory.</li>
               </ol>
             </div>
           </div>
@@ -356,11 +346,11 @@
 
 
         <div class="project">
+          <div class="projectName">5.FullStack Shop</div>
           <div class="projectImageContainer">
             <img src="./assets/images/shop.png" alt="FullStack Shop" class="projectImage" decoding="async"/>
           </div>
           <div class="projectInfo">
-            <div class="projectName">FullStack Shop</div>
             <div class="projectLinks">
               <a href="https://github.com/naveen0-0/ecommerceclient" target="_blank" title='View Code' class="projectLink">
                 <img src="./assets/images/github.png" alt="Github" decoding="async"/>
@@ -383,18 +373,13 @@
             <div class="extraprojectinfo">
               <div class="extraprojectinfotitle">Features & Functionality</div>
               <ol class="orderedlist">
-                <li>Authentication Setup (SignUp and Login).</li>
-                <li>First Signup and create an account.</li>
-                <li>You will be redirected to the login page.</li>
-                <li>Login with your credentials.</li>
-                <li>Go to the "THIRD" tab (Add Friend tab) and search for you friend.</li>
-                <li>Hit the send button to send a friend request (Create another user in a private window to simulate this experience).</li>
-                <li>Your friend will receive your friend request (which can be "ACCEPTED" or "DECLINED").</li>
-                <li>If accepted, Your friend will be added in your friends list in the first tab.</li>
-                <li>You can send messages back and forth with your friend.</li>
-                <li>In the second tab, you can enter a group name and create a group.</li>
-                <li>And in the top right, you can click the icon and your friend to the group and have group conversations.</li>
-                <li>By the way, LOGOUT button is in the bottom left corner.</li>
+                <li>You will be presented with list of all products on the intial load.</li>
+                <li>You can click on the product to read more information about that product.</li>
+                <li>In the top right corner, Click the person icon and go to the sign up page to create an account.</li>
+                <li>Now, go to the login page and login in with your credentials.</li>
+                <li>Now, you can go into each product and add products to your cart.</li>
+                <li>Add some sample products and go into your cart by clicking the cart icon in the navbar.</li>
+                <li>You can increase or decrease the number of products of any product in the cart.</li>
               </ol>
             </div>
           </div>
@@ -402,11 +387,11 @@
 
 
         <div class="project">
+          <div class="projectName">6.Covid Tracker</div>
           <div class="projectImageContainer">
             <img src="./assets/images/covid.png" alt="Covid Tracker" class="projectImage" decoding="async"/>
           </div>
           <div class="projectInfo">
-            <div class="projectName">Covid Tracker</div>
             <div class="projectLinks">
               <a href="https://github.com/naveen0-0/trackerc19" target="_blank" title='View Code' class="projectLink">
                 <img src="./assets/images/github.png" alt="Github" decoding="async"/>
@@ -429,18 +414,9 @@
             <div class="extraprojectinfo">
               <div class="extraprojectinfotitle">Features & Functionality</div>
               <ol class="orderedlist">
-                <li>Authentication Setup (SignUp and Login).</li>
-                <li>First Signup and create an account.</li>
-                <li>You will be redirected to the login page.</li>
-                <li>Login with your credentials.</li>
-                <li>Go to the "THIRD" tab (Add Friend tab) and search for you friend.</li>
-                <li>Hit the send button to send a friend request (Create another user in a private window to simulate this experience).</li>
-                <li>Your friend will receive your friend request (which can be "ACCEPTED" or "DECLINED").</li>
-                <li>If accepted, Your friend will be added in your friends list in the first tab.</li>
-                <li>You can send messages back and forth with your friend.</li>
-                <li>In the second tab, you can enter a group name and create a group.</li>
-                <li>And in the top right, you can click the icon and your friend to the group and have group conversations.</li>
-                <li>By the way, LOGOUT button is in the bottom left corner.</li>
+                <li>React + API Integration.</li>
+                <li>You can get all the latest information regarding recent covid pandemic cases in each country.</li>
+                <li>Select the country you want to see the information of.</li>
               </ol>
             </div>
           </div>
