--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           good at it.
         </p>
         <p>
-          I started to learn programming {getTime()} years ago. I initially went into data scientist route and started to
+          I started to learn programming <span id="time"></span> years ago. I initially went into data scientist route and started to
           learn python and played with Numpy module. But, I switched to wev development because, working with numbers is
           kind of boring. I prefered to work in the creative field.
         </p>
