Removed the Decoding async

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <div class="navlink" title="Download the Resume">
           <a href="./assets/pdfs/resume.pdf" class="resume" target="_blank" download="Naveen_Kumar_Reddy_Resume">
-            <img src="./assets/images/download.png" alt="download" decoding="async" />
+            <img src="./assets/images/download.png" alt="download"  />
             <div>Resume</div>
           </a>
         </div>
@@ -65,7 +65,7 @@
       <div class="homeTextContainer">
         <div class="homeText">I am Naveen.<br />I am a Web Developer.</div>
         <a href="#projectsSection" class="actionbtn">
-          <img src="./assets/images/suitcase.png" alt="SuitCase" class="actionbtnimg" decoding="async" />
+          <img src="./assets/images/suitcase.png" alt="SuitCase" class="actionbtnimg"  />
           <div class="actionbtntext">View Projects</div>
         </a>
       </div>
@@ -101,57 +101,57 @@
       <div class="skillTitle">Skills</div>
       <div class="skillsContainer">
         <div class="skill">
-          <img src="./assets/images/html.png" alt="Html" class="skillImage" decoding="async"/>
+          <img src="./assets/images/html.png" alt="Html" class="skillImage" />
           <div class="skillName">Html</div>
         </div>
         
         <div class="skill">
-          <img src="./assets/images/css.png" alt="Css" class="skillImage" decoding="async"/>
+          <img src="./assets/images/css.png" alt="Css" class="skillImage" />
           <div class="skillName">Css</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/javascript.png" alt="Javascript" class="skillImage" decoding="async"/>
+          <img src="./assets/images/javascript.png" alt="Javascript" class="skillImage" />
           <div class="skillName">Javascript</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/bootstrap.png" alt="Bootstrap" class="skillImage" decoding="async"/>
+          <img src="./assets/images/bootstrap.png" alt="Bootstrap" class="skillImage" />
           <div class="skillName">Bootstrap</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/jquery.png" alt="Jquery" class="skillImage" decoding="async"/>
+          <img src="./assets/images/jquery.png" alt="Jquery" class="skillImage" />
           <div class="skillName">Jquery</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/sass.png" alt="Sass" class="skillImage" decoding="async"/>
+          <img src="./assets/images/sass.png" alt="Sass" class="skillImage" />
           <div class="skillName">Sass</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/react.png" alt="React" class="skillImage" decoding="async"/>
+          <img src="./assets/images/react.png" alt="React" class="skillImage" />
           <div class="skillName">React</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/redux.png" alt="Redux" class="skillImage" decoding="async"/>
+          <img src="./assets/images/redux.png" alt="Redux" class="skillImage" />
           <div class="skillName">Redux</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/nodejs.png" alt="NodeJs" class="skillImage" decoding="async"/>
+          <img src="./assets/images/nodejs.png" alt="NodeJs" class="skillImage" />
           <div class="skillName">Nodejs</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/express.png" alt="ExpressJs" class="skillImage" decoding="async"/>
+          <img src="./assets/images/express.png" alt="ExpressJs" class="skillImage" />
           <div class="skillName">Expressjs</div>
         </div>
 
         <div class="skill">
-          <img src="./assets/images/mongodb.png" alt="MongoDB" class="skillImage" decoding="async"/>
+          <img src="./assets/images/mongodb.png" alt="MongoDB" class="skillImage" />
           <div class="skillName">MongoDB</div>
         </div>
       </div>
@@ -165,16 +165,16 @@
         <div class="project">
           <div class="projectName">1.Chat App</div>
           <div class="projectImageContainer">
-            <img src="./assets/images/chat.png" alt="Chat App" class="projectImage" decoding="async"/>
+            <img src="./assets/images/chat.png" alt="Chat App" class="projectImage" />
           </div>
           <div class="projectInfo">
             <div class="projectLinks">
               <a href="https://github.com/naveen0-0/converse_client" target="_blank" title='View Code' class="projectLink">
-                <img src="./assets/images/github.png" alt="Github" decoding="async"/>
+                <img src="./assets/images/github.png" alt="Github" />
                 <div>Code</div>
               </a>
               <a href="https://converse-1910.netlify.app" target="_blank" title='Go to Site' class="projectLink">
-                <img src="./assets/images/live.png" alt="Live" decoding="async"/>
+                <img src="./assets/images/live.png" alt="Live" />
                 <div>Live</div>
               </a>
             </div>
@@ -216,16 +216,16 @@
         <div class="project">
           <div class="projectName">2.Blog App</div>
           <div class="projectImageContainer">
-            <img src="./assets/images/blog.png" alt="Blog App" class="projectImage" decoding="async"/>
+            <img src="./assets/images/blog.png" alt="Blog App" class="projectImage" />
           </div>
           <div class="projectInfo">
             <div class="projectLinks">
               <a href="https://github.com/naveen0-0/realblogclient" target="_blank" title='View Code' class="projectLink">
-                <img src="./assets/images/github.png" alt="Github" decoding="async"/>
+                <img src="./assets/images/github.png" alt="Github" />
                 <div>Code</div>
               </a>
               <a href="https://blogreal.netlify.app" target="_blank" title='Go to Site' class="projectLink">
-                <img src="./assets/images/live.png" alt="Live" decoding="async"/>
+                <img src="./assets/images/live.png" alt="Live" />
                 <div>Live</div>
               </a>
             </div>
@@ -268,16 +268,16 @@
         <div class="project">
           <div class="projectName">3.News App</div>
           <div class="projectImageContainer">
-            <img src="./assets/images/news.png" alt="News App" class="projectImage" decoding="async"/>
+            <img src="./assets/images/news.png" alt="News App" class="projectImage" />
           </div>
           <div class="projectInfo">
             <div class="projectLinks">
               <a href="https://github.com/naveen0-0/news" target="_blank" title='View Code' class="projectLink">
-                <img src="./assets/images/github.png" alt="Github" decoding="async"/>
+                <img src="./assets/images/github.png" alt="Github" />
                 <div>Code</div>
               </a>
               <a href="https://newsroll.netlify.app" target="_blank" title='Go to Site' class="projectLink">
-                <img src="./assets/images/live.png" alt="Live" decoding="async"/>
+                <img src="./assets/images/live.png" alt="Live" />
                 <div>Live</div>
               </a>
             </div>
@@ -307,16 +307,16 @@
         <div class="project">
           <div class="projectName">4.Movie App</div>
           <div class="projectImageContainer">
-            <img src="./assets/images/movie.png" alt="Movie App" class="projectImage" decoding="async"/>
+            <img src="./assets/images/movie.png" alt="Movie App" class="projectImage" />
           </div>
           <div class="projectInfo">
             <div class="projectLinks">
               <a href="https://github.com/naveen0-0/newmovie" target="_blank" title='View Code' class="projectLink">
-                <img src="./assets/images/github.png" alt="Github" decoding="async"/>
+                <img src="./assets/images/github.png" alt="Github" />
                 <div>Code</div>
               </a>
               <a href="https://mynori.netlify.app" target="_blank" title='Go to Site' class="projectLink">
-                <img src="./assets/images/live.png" alt="Live" decoding="async"/>
+                <img src="./assets/images/live.png" alt="Live" />
                 <div>Live</div>
               </a>
             </div>
@@ -348,16 +348,16 @@
         <div class="project">
           <div class="projectName">5.FullStack Shop</div>
           <div class="projectImageContainer">
-            <img src="./assets/images/shop.png" alt="FullStack Shop" class="projectImage" decoding="async"/>
+            <img src="./assets/images/shop.png" alt="FullStack Shop" class="projectImage" />
           </div>
           <div class="projectInfo">
             <div class="projectLinks">
               <a href="https://github.com/naveen0-0/ecommerceclient" target="_blank" title='View Code' class="projectLink">
-                <img src="./assets/images/github.png" alt="Github" decoding="async"/>
+                <img src="./assets/images/github.png" alt="Github" />
                 <div>Code</div>
               </a>
               <a href="https://xhoppie.netlify.app" target="_blank" title='Go to Site' class="projectLink">
-                <img src="./assets/images/live.png" alt="Live" decoding="async"/>
+                <img src="./assets/images/live.png" alt="Live" />
                 <div>Live</div>
               </a>
             </div>
@@ -389,16 +389,16 @@
         <div class="project">
           <div class="projectName">6.Covid Tracker</div>
           <div class="projectImageContainer">
-            <img src="./assets/images/covid.png" alt="Covid Tracker" class="projectImage" decoding="async"/>
+            <img src="./assets/images/covid.png" alt="Covid Tracker" class="projectImage" />
           </div>
           <div class="projectInfo">
             <div class="projectLinks">
               <a href="https://github.com/naveen0-0/trackerc19" target="_blank" title='View Code' class="projectLink">
-                <img src="./assets/images/github.png" alt="Github" decoding="async"/>
+                <img src="./assets/images/github.png" alt="Github" />
                 <div>Code</div>
               </a>
               <a href="https://trackerc19.netlify.app" target="_blank" title='Go to Site' class="projectLink">
-                <img src="./assets/images/live.png" alt="Live" decoding="async"/>
+                <img src="./assets/images/live.png" alt="Live" />
                 <div>Live</div>
               </a>
             </div>
@@ -480,25 +480,25 @@
     
       <div class="mediaLinks">
         <a href="https://www.facebook.com/naveen12309/" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/images/facebook.png" alt="Facebook" decoding="async"/>
+          <img src="./assets/images/facebook.png" alt="Facebook" />
         </a>
 
         <a href="https://twitter.com/Naveen87763128" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/images/twitter.png" alt="Twitter" decoding="async"/>
+          <img src="./assets/images/twitter.png" alt="Twitter" />
         </a>
 
         <a href="https://github.com/naveen0-0" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/images/github.png" alt="Github" decoding="async"/>
+          <img src="./assets/images/github.png" alt="Github" />
         </a>
       </div>
 
 
       <div class="success" id="success">
-        <img src="./assets/images/checked.png" alt="checked" decoding="async">
+        <img src="./assets/images/checked.png" alt="checked" >
         <div class="msg">Message Successfully Sent</div>
       </div>
       <div class="error" id="error">
-        <img src="./assets/images/cancel.png" alt="Cancel" decoding="async">
+        <img src="./assets/images/cancel.png" alt="Cancel" >
         <div class="msg">Error Occured</div>
       </div>  
 
