--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <title>Naveen</title>
   <link rel="stylesheet" href="./index.css">
   <script src="./index.js" defer type="module"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-  <script type="text/javascript">
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js" defer></script>
+  <script type="text/javascript" defer>
     (function () {
       emailjs.init('p4D5uyCTOzuEE75ss');
     })();
