--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="description" content="This is Naveen Kumar Reddy's Personal Portfolio">
   <title>Naveen</title>
   <link rel="stylesheet" href="./index.css">
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js" defer></script>
-  <script type="text/javascript" defer>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <script type="text/javascript">
     (function () {
       emailjs.init('p4D5uyCTOzuEE75ss');
     })();
